Improve Discord formatting and MCP time tool
- Update time tool to return Discord timestamps (<t:UNIX:R>) by default
- Enhance system prompt with clear formatting guidelines
- Expand example.env with comprehensive documentation
- Add web search configuration details (no API key required)

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,75 @@
+# ========================================
+# Discord Bot Configuration
+# ========================================
+
 # Discord Configuration
+# Get these from https://discord.com/developers/applications
 DISCORD_TOKEN=your_discord_bot_token_here
 DISCORD_CLIENT_ID=your_discord_client_id_here
 
+# ========================================
 # OpenRouter Configuration
+# ========================================
+
+# OpenRouter API Key (required)
+# Get your API key from https://openrouter.ai/keys
 OPENROUTER_API_KEY=your_openrouter_api_key_here
+
+# OpenRouter Base URL (optional, uses default if not set)
 OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
 
 # OpenRouter Models
 # You can use different models for different purposes
 # See https://openrouter.ai/models for available models
+# 
+# Router model: Used to determine which tool/action to take
 OPENROUTER_MODEL_ROUTER=openai/gpt-3.5-turbo
+# Chat model: Used for general conversation
 OPENROUTER_MODEL_CHAT=openai/gpt-3.5-turbo
+# Summarizer model: Used to summarize conversation history
 OPENROUTER_MODEL_SUMMARIZER=openai/gpt-3.5-turbo
 
-# Bot Configuration
-BOT_SYSTEM_PROMPT=You are a helpful and friendly Discord bot assistant. Be conversational and engaging.
-BOT_PERSONALITY=friendly, helpful, and slightly humorous
+# Allowed Chat Models (comma-separated list)
+# Users can switch to these models via admin commands
+# OPENROUTER_ALLOWED_CHAT_MODELS=openai/gpt-3.5-turbo,openai/gpt-4o-mini,anthropic/claude-3.5-sonnet
+
+# ========================================
+# Bot Behavior Configuration
+# ========================================
+
+# System Prompt (optional)
+# Defines the bot's core behavior and formatting guidelines
+# If not set, uses a default Discord-friendly prompt with formatting rules
+# BOT_SYSTEM_PROMPT=You are a helpful Discord bot assistant.
+
+# Personality (optional)
+# Defines the bot's tone and style
+# BOT_PERSONALITY=friendly, helpful, and slightly humorous
+
+# Bot Memory Settings
+# Maximum number of messages to keep in short-term memory
 BOT_MAX_MEMORY_MESSAGES=10
+
+# Enable automatic conversation summarization
+# When enabled, older messages are summarized to maintain context
 BOT_ENABLE_SUMMARY=true
+
+# Trigger Names (optional, comma-separated)
+# Additional names the bot will respond to (case-insensitive)
+# Leave empty to only respond when mentioned with @bot
+# BOT_TRIGGER_NAMES=bot,assistant,helper
+
+# ========================================
+# Web Search Configuration (MCP Tool)
+# ========================================
+
+# Web search is provided via the DuckDuckGo HTML search tool
+# NO API KEYS REQUIRED - works out of the box
+# The bot can search the web when needed using the web_search MCP tool
+# 
+# Provider: DuckDuckGo (HTML endpoint)
+# Base URL: https://html.duckduckgo.com/html/
+# Max Results: Configurable per query (1-10, default 5)
+# 
+# No additional configuration needed for web search functionality.
+
