Generate clean Discord timestamps in code, not via LLM
- Time tool now returns only Discord timestamp strings (e.g., <t:1734624000:s>)
- Default format changed to :s (short time) from :f
- Removed all human-readable date strings and extra metadata
- Returns simple string instead of object with metadata
- Support all Discord timestamp formats (s/f/R/t/T/D/F)
- Updated prompt to pass timestamps through verbatim
- Clarified example.env web search documentation
- No routing or architecture changes

--- a/.env.example
+++ b/.env.example
@@ -71,5 +71,6 @@ BOT_ENABLE_SUMMARY=true
 # Base URL: https://html.duckduckgo.com/html/
 # Max Results: Configurable per query (1-10, default 5)
 # 
-# No additional configuration needed for web search functionality.
+# No additional environment variables or API keys needed for web search.
+# The tool is automatically available to the bot via MCP integration.
 
