Add image generation with cost-aware routing and Discord-safe output
New Features:
- Image generation route added to automatic routing system
- Cost-optimized using google/gemini-2.0-flash-exp:free by default
- Intelligent resolution parsing from user prompts
- Automatic Discord file size handling (8MB limit)

Resolution Support:
- Default: 512×512 (cost-optimized)
- Small: 128×128, 256×256
- Medium: 768×768
- Large: 1024×1024
- Landscape 16:9: 768×432, 1024×576
- Portrait 9:16: 432×768, 576×1024
- Banner: 1024×256

Discord Integration:
- Automatic image compression for files >8MB
- Progressive quality reduction and downscaling
- Fallback to chat message if image can't be compressed
- Sends as attachment with formatted caption

Architecture:
- New ImageService in ai/ for image generation
- Extended RouteDecision type to include 'image' route
- Updated messageHandler to handle image generation flow
- Isolated from chat/tool/MCP logic
- Preserves existing behavior for all other routes

Configuration:
- Added IMAGE_MODEL, IMAGE_DEFAULT_WIDTH/HEIGHT, IMAGE_MAX_WIDTH/HEIGHT to config
- Updated example.env with image generation settings
- Comprehensive README section explaining image features

Dependencies:
- Added sharp for image processing and compression

--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,31 @@ OPENROUTER_MODEL_SUMMARIZER=openai/gpt-3.5-turbo
 # OPENROUTER_ALLOWED_CHAT_MODELS=openai/gpt-3.5-turbo,openai/gpt-4o-mini,anthropic/claude-3.5-sonnet
 
 # ========================================
+# Image Generation Configuration
+# ========================================
+
+# Image Model (optional)
+# Cost-optimized model for image generation
+# Default uses free tier with Gemini Flash
+IMAGE_MODEL=google/gemini-2.0-flash-exp:free
+
+# Image Resolution Settings (optional)
+# Default resolution for image generation (width x height)
+IMAGE_DEFAULT_WIDTH=512
+IMAGE_DEFAULT_HEIGHT=512
+
+# Maximum allowed resolution (prevents excessive costs/sizes)
+IMAGE_MAX_WIDTH=1024
+IMAGE_MAX_HEIGHT=1024
+
+# Supported resolutions:
+# - Square: 128×128, 256×256, 512×512 (default), 768×768, 1024×1024
+# - 16:9 landscape: 768×432, 1024×576
+# - 9:16 portrait: 432×768, 576×1024
+# - Banner: 1024×256
+# Note: Discord upload limit is 8MB - images are automatically compressed if needed
+
+# ========================================
 # Bot Behavior Configuration
 # ========================================
 
