--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "dev": "tsx src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["discord", "bot", "ai", "typescript"],
+  "keywords": [
+    "discord",
+    "bot",
+    "ai",
+    "typescript"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.13.2",
     "discord.js": "^14.25.1",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@types/node": "^25.0.3",
