Fix image generation to use google/gemini-2.5-flash-image API and replace gpt-3.5-turbo with mistralai/devstral-2512:free

--- a/.env.example
+++ b/.env.example
@@ -23,24 +23,24 @@ OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
 # See https://openrouter.ai/models for available models
 # 
 # Router model: Used to determine which tool/action to take
-OPENROUTER_MODEL_ROUTER=openai/gpt-3.5-turbo
+OPENROUTER_MODEL_ROUTER=mistralai/devstral-2512:free
 # Chat model: Used for general conversation
-OPENROUTER_MODEL_CHAT=openai/gpt-3.5-turbo
+OPENROUTER_MODEL_CHAT=mistralai/devstral-2512:free
 # Summarizer model: Used to summarize conversation history
-OPENROUTER_MODEL_SUMMARIZER=openai/gpt-3.5-turbo
+OPENROUTER_MODEL_SUMMARIZER=mistralai/devstral-2512:free
 
 # Allowed Chat Models (comma-separated list)
 # Users can switch to these models via admin commands
-# OPENROUTER_ALLOWED_CHAT_MODELS=openai/gpt-3.5-turbo,openai/gpt-4o-mini,anthropic/claude-3.5-sonnet
+# OPENROUTER_ALLOWED_CHAT_MODELS=mistralai/devstral-2512:free,openai/gpt-4o-mini,anthropic/claude-3.5-sonnet
 
 # ========================================
 # Image Generation Configuration
 # ========================================
 
-# Image Model (optional)
-# Cost-optimized model for image generation
-# Default uses free tier with Gemini Flash
-IMAGE_MODEL=google/gemini-2.0-flash-exp:free
+# Image Model (required for image generation)
+# Use google/gemini-2.5-flash-image for image generation
+# This model has text+image->text+image modality
+IMAGE_MODEL=google/gemini-2.5-flash-image
 
 # Image Resolution Settings (optional)
 # Default resolution for image generation (width x height)
