Switch image model to black-forest-labs/flux.2-flex for reliable base64 image generation

--- a/.env.example
+++ b/.env.example
@@ -38,9 +38,9 @@ OPENROUTER_MODEL_SUMMARIZER=mistralai/devstral-2512:free
 # ========================================
 
 # Image Model (required for image generation)
-# Use google/gemini-2.5-flash-image for image generation
-# This model has text+image->text+image modality
-IMAGE_MODEL=google/gemini-2.5-flash-image
+# Use black-forest-labs/flux.2-flex for reliable image generation
+# This model properly returns base64 image data
+IMAGE_MODEL=black-forest-labs/flux.2-flex
 
 # Image Resolution Settings (optional)
 # Default resolution for image generation (width x height)
