Switch to Gemini 2.5 Flash and use exact user prompts for image generation

--- a/.env.example
+++ b/.env.example
@@ -38,9 +38,9 @@ OPENROUTER_MODEL_SUMMARIZER=mistralai/devstral-2512:free
 # ========================================
 
 # Image Model (required for image generation)
-# Use black-forest-labs/flux.2-flex for reliable image generation
+# Use google/gemini-2.5-flash-image for fast, reliable image generation
 # This model properly returns base64 image data
-IMAGE_MODEL=black-forest-labs/flux.2-flex
+IMAGE_MODEL=google/gemini-2.5-flash-image
 
 # Image Resolution Settings (optional)
 # Default resolution for image generation (width x height)
