--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
+    "console": "tsx src/console-mode.ts",
+    "console:build": "tsc && node dist/console-mode.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
