--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,15 @@
 
 # Discord Configuration
 # Get these from https://discord.com/developers/applications
+# OPTIONAL: Omit DISCORD_TOKEN to run in console mode only
 DISCORD_TOKEN=your_discord_bot_token_here
 DISCORD_CLIENT_ID=your_discord_client_id_here
+
+# Console Mode (optional)
+# Set to 'true' or '1' to force console mode instead of Discord
+# Alternatively, use --console flag: npm start -- --console
+# Or omit DISCORD_TOKEN entirely
+# CONSOLE_MODE=true
 
 # ========================================
 # OpenRouter Configuration
