Add hybrid mode: Discord + Console simultaneously
- New --hybrid flag runs Discord bot AND console interface together
- Use 'node dist/index.js --hybrid' in Pterodactyl for both modes
- Discord bot connects to servers while console accepts /persona commands
- HYBRID_MODE environment variable support
- Updated all documentation with hybrid mode as primary option
- Backwards compatible with all existing modes (Discord-only, console-only)

--- a/.env.example
+++ b/.env.example
@@ -9,10 +9,12 @@ DISCORD_TOKEN=your_discord_bot_token_here
 DISCORD_CLIENT_ID=your_discord_client_id_here
 
 # Console Mode (optional)
-# Set to 'true' or '1' to force console mode instead of Discord
-# Alternatively, use --console flag: npm start -- --console
-# Or omit DISCORD_TOKEN entirely
+# CONSOLE_MODE=true    - Console-only mode (no Discord)
+# HYBRID_MODE=true     - Discord + Console simultaneously
+# Or use flags: --console (console-only) or --hybrid (both)
+# Or omit DISCORD_TOKEN for automatic console-only mode
 # CONSOLE_MODE=true
+# HYBRID_MODE=true
 
 # ========================================
 # OpenRouter Configuration
