--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.25.1",
     "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
     "sharp": "^0.34.5",
